--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -26,11 +26,14 @@
 <div class="row">
   <div class="col-md-12 portfolio-item">
     <a href="#" class=" image_container thumbnail"><img src="<%= @tournament.large %>">
-      <button type="button" class="buttony btn btn-default" aria-label="Left Align"><i class="fa fa-heart"></i> Follow</button>
-      <button type="button" class="buttonz btn btn-default" aria-label="Left Align"><i class="fa fa-calendar-plus-o"></i> Subscribe</button>
+      <button type="button" class="btn btn-warning btn-border" aria-label="Left Align"><i class="fa fa-heart"></i> Follow</button>
+      <%= form_tag(subscribes_path, :method => "post") do %>
+      <button class="fa fa-calendar-plus-o btn btn-warning btn-border" type="submit">Subscribe!</button>
+      <% end %>
     </a>
   </div>
 </div>
+
 
 <div class="row">
 
